--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 Hello there, awesome person!
 <html>
+      <head>
+        <title>Gautham's Webpage!</title>
+    </head>
   <body>
     Hello there, Welcome all! 
   </body>
