--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ Hello there, awesome person!
     </head>
   <body>
         <h1>Header for Gautham's Webpage1!</h1>
+        <img src="https://avatars.githubusercontent.com/u/73785666?v=4">
     Hello there, Welcome all! 
   </body>
 </html>
