--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ Hello there, awesome person!
 <html>
       <head>
         <title>Gautham's Webpage!</title>
+             <link rel="stylesheet" href="style.css">            
     </head>
   <body>
         <h1>Header for Gautham's Webpage1!</h1>
